add occlusionSubtract, remove removeHiddenLines